<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:baselineAligned="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/Message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/message"
                    android:background="#FFFFFF"
                    android:text="" />
                <EditText
                    android:id="@+id/Key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/key"
                    android:background="#FFFFFF"
                    android:text="" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <ImageButton
                    android:id="@+id/encryptButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_encrypt"
                    android:contentDescription="@string/descE"/>
                <ImageButton
                    android:id="@+id/decryptButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_decrypt"
                    android:contentDescription="@string/descD"/>
            </LinearLayout>

            <TextView
                android:id="@+id/encryptedMessage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:text="@string/encmessage"
                android:textIsSelectable="true"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:contentDescription="Used for displaying pictures, transparent as default."
                android:id="@+id/image"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/transparent"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>